--- a/style-sheet.css
+++ b/style-sheet.css
@@ -65,7 +65,7 @@ body {
   padding: 20px;
   margin-bottom: 20px;
 }
-.container2 div{
+.container2 figure{
   width: 180px;
   font-size: 12px;
   text-align: center;
