--- a/style-sheet.css
+++ b/style-sheet.css
@@ -65,8 +65,8 @@ body {
   padding: 20px;
   margin-bottom: 20px;
 }
-.container2{
-  width: 180px;
+.container2 figure{
+  width: 80px;
   font-size: 12px;
   text-align: center;
 }
