--- a/style-sheet.css
+++ b/style-sheet.css
@@ -58,14 +58,14 @@ body {
   margin-top: 25px;
   text-align: center;
 }
-.container2{
+.container2 div{
   display: flex;
   justify-content: center;
   gap: 10px;
   padding: 20px;
   margin-bottom: 20px;
 }
-.container2 figure{
+.container2 p{
   width: 80px;
   font-size: 12px;
   text-align: center;
