--- a/style-sheet.css
+++ b/style-sheet.css
@@ -58,7 +58,7 @@ body {
   margin-top: 25px;
   text-align: center;
 }
-.container2 div{
+.container2 figure p{
   display: flex;
   justify-content: center;
   gap: 10px;
