--- a/style-sheet.css
+++ b/style-sheet.css
@@ -58,12 +58,12 @@ body {
   margin-top: 25px;
   text-align: center;
 }
-.container2 figure p{
+.container2 img p{
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-figure p{
+.container2 img p{
   gap: 10px;
   padding: 20px;
   margin-bottom: 20px;
