--- a/style-sheet.css
+++ b/style-sheet.css
@@ -60,7 +60,7 @@ body {
 }
 .container2 img p{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 .container2 p{
