--- a/style-sheet.css
+++ b/style-sheet.css
@@ -58,13 +58,15 @@ body {
   margin-top: 25px;
   text-align: center;
 }
-.container2 img p{
+.container2{
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  gap: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
 }
-.container2 p{
-  width: 80px;
+.container2 div{
+  width: 180px;
   font-size: 12px;
   text-align: center;
 }
@@ -73,7 +75,6 @@ body {
   height: 150px;
   border-radius: 15px ;
   border: 3px solid #3882F6;
-}
 .quote{
   font-size: 36px;
   font-weight: lighter;
