--- a/style-sheet.css
+++ b/style-sheet.css
@@ -75,6 +75,7 @@ body {
   height: 150px;
   border-radius: 15px ;
   border: 3px solid #3882F6;
+}
 .quote{
   font-size: 36px;
   font-weight: lighter;
